--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-numpy ~= 1.21
-scipy ~= 1.0.1
-future ~= 0.16.0
-matplotlib ~= 2.2.2
-pillow >= 6.2.0
-opencv-python ~= 4.2.0.32
-scikit-image ~= 0.14.0
-pyaml
+opencv-python==3.4.17.63
+scikit-image==0.18.2
+pyyaml==5.3.1
+pillow==9.4.0
+lpips==0.1.4
